2004-06-12    <tino@firebird.03.softkill.net>

	* file.h: created new file as I needed file_lstat_diff.

	* Makefile-diff.awk: added for "make diff"
	(state=3): now "No Tags Exist" will be recognized, too
	(END): used "sticky" instead of "stickycount", "untagged files"
	not printed if there are none
	(finish): list of files with warning added.  Sigh .. "Needs Patch"
	added, too, there are just too many different states to recognize.
	Therefor all those CI/CO runs here and now. List of sticky files
	added to count, too.

	* Makefile (diff): added, this function shows a comprehensive list
	of differences to the HEAD revision of CVS.  i.E. this is what you
	get when you do a close look at "cvs status -v"

	* buf.h (tino_buf_read, tino_buf_write): now return int as they
	should

2004-05-23    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_free): filedescriptor is always destroyed
	after process(.., TINO_SOCK_CLOSE), stupid to leave this to the
	routine sometimes.

2004-05-21    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_new): Well, one little star makes a big
	difference.  A serious memory corruption occured because there was
	too few memory allocated.  Thanks to -lefence